Changes made to the size and style of the title.

--- a/solarsystem.html
+++ b/solarsystem.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h1>Solar System</h1>
+    <h1 style="font-family: Arial, Helvetica, sans-serif; font-size: 70px;">Solar System</h1>
     <img src="https://upload.wikimedia.org/wikipedia/commons/c/cb/Planets2013.svg" alt="Solar System image"
         height="250px" width="700px">
     <p>The solar system consists of the sun and everything that orbits the sun. This includes the eight planets and
