--- a/solarsystem.html
+++ b/solarsystem.html
@@ -5,10 +5,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Solar System</title>
+    <style>
+        table,
+        th,
+        td {
+            border: 2px solid black;
+        }
+    </style>
 </head>
 
-<body>
-    <h1 style="font-family: Arial, Helvetica, sans-serif; font-size: 70px;">Solar System</h1>
+<body style="background-color: wheat;">
+    <h1 style="font-family: Arial, Helvetica, sans-serif; font-size: 70px; color:rgb(139,0,0)">Solar System</h1>
     <img src="https://upload.wikimedia.org/wikipedia/commons/c/cb/Planets2013.svg" alt="Solar System image"
         height="250px" width="700px">
     <p>The solar system consists of the sun and everything that orbits the sun. This includes the eight planets and
@@ -20,8 +27,8 @@
         motion.
     </p>
     <p><strong><u> Planets in the solar system: </u></strong> </p>
-    <table>
-        <tr>
+    <table style="border: 2px solid black;">
+        <tr style="background-color: yellow;">
             <th>No. </th>
             <th>Planet Name </th>
             <th>Distance from Sun (in million km)</th>
